# dojo-beta

./: Cargo.toml  blob_ids.json  blob_ids_2.json  blob_ids_3.json
.github/workflows/: ci.yml  release-dispatch.yml
crates/dojo-test-utils/src/: sequencer.rs
crates/dojo-world/src/contracts/: model_test.rs
crates/dojo/core/src/: lib.cairo
crates/katana/block-builder/: Cargo.toml
crates/katana/block-builder/src/: lib.rs
crates/katana/block-producer/: Cargo.toml
crates/katana/block-producer/src/: lib.rs
crates/katana/chain-spec/src/: lib.rs
crates/katana/cli/src/: args.rs
crates/katana/controller/src/: lib.rs
crates/katana/core/: Cargo.toml
crates/katana/core/benches/: commit.rs
crates/katana/core/src/: constants.rs
crates/katana/core/src/backend/: mod.rs  storage.rs
crates/katana/core/src/service/: block_producer.rs
crates/katana/core/src/service/messaging/: mod.rs  service.rs
crates/katana/executor/: Cargo.toml
crates/katana/executor/src/abstraction/: error.rs  mod.rs
crates/katana/executor/src/implementation/: noop.rs
crates/katana/executor/src/implementation/blockifier/: mod.rs  state.rs  utils.rs
crates/katana/executor/tests/: chain_id.rs  executor.rs
crates/katana/executor/tests/fixtures/: mod.rs  transaction.rs
crates/katana/node/src/: lib.rs
crates/katana/pipeline/: Cargo.toml  blob_ids_4.json
crates/katana/pipeline/src/: download.rs  lib.rs  os.rs  submit.rs  verification.rs
crates/katana/pipeline/src/stage/: mod.rs  sequencing.rs  state_diffs.rs
crates/katana/pool/: Cargo.toml
crates/katana/pool/src/: lib.rs  pool.rs  tx.rs
crates/katana/pool/src/validation/: mod.rs  stateful.rs
crates/katana/primitives/: Cargo.toml
crates/katana/primitives/macros/: Cargo.toml
crates/katana/primitives/macros/src/: lib.rs
crates/katana/primitives/src/: block.rs  class.rs  contract.rs  env.rs  lib.rs  message.rs  receipt.rs  state.rs  trace.rs  transaction.rs
crates/katana/primitives/src/conversion/: rpc.rs
crates/katana/primitives/src/da/: encoding.rs
crates/katana/primitives/src/genesis/: allocation.rs  builder.rs  constant.rs  json.rs  mod.rs
crates/katana/rpc/rpc-builder/: Cargo.toml
crates/katana/rpc/rpc-builder/src/: lib.rs
crates/katana/rpc/rpc-types/: Cargo.toml
crates/katana/rpc/rpc-types/src/: account.rs  class.rs  lib.rs  transaction.rs
crates/katana/rpc/rpc-types/src/transactions/: invoke.rs  mod.rs
crates/katana/rpc/rpc/src/starknet/: mod.rs
crates/katana/rpc/rpc/src/utils/: events.rs
crates/katana/runner/: Cargo.toml
crates/katana/runner/macro/src/: config.rs  entry.rs  item.rs
crates/katana/runner/src/: ctx.rs  lib.rs
crates/katana/runner/tests/: runner.rs
crates/katana/storage/codecs/src/: lib.rs
crates/katana/storage/db/src/: tables.rs
crates/katana/storage/db/src/abstraction/: transaction.rs
crates/katana/storage/db/src/codecs/: mod.rs  postcard.rs
crates/katana/storage/db/src/mdbx/: mod.rs  tx.rs
crates/katana/storage/db/src/models/: contract.rs  storage.rs
crates/katana/storage/provider/src/: error.rs  lib.rs  test_utils.rs
crates/katana/storage/provider/src/providers/: mod.rs
crates/katana/storage/provider/src/providers/db/: mod.rs  state.rs
crates/katana/storage/provider/src/traits/: mod.rs  state.rs  state_update.rs
crates/katana/storage/provider/test-data/: test-account.json
crates/katana/storage/provider/tests/: contract.rs  fixtures.rs  storage.rs
crates/saya/core/src/prover/: program_input.rs
crates/saya/provider/src/rpc/: state.rs
crates/sozo/ops/src/migration/: mod.rs
crates/torii/core/src/: sql_test.rs
crates/torii/indexer/src/: engine.rs  test.rs
crates/torii/sqlite/src/: lib.rs
crates/torii/sqlite/src/executor/: mod.rs
examples/simple/: dojo_dev.toml
(+6 files in other folders)
