[package]
description = "Transaction pool abstraction and implementation for Katana"
edition.workspace = true
license.workspace = true
name = "katana-pool"
repository.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
katana-executor.workspace = true
katana-primitives.workspace = true
katana-provider.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true

# feature: test-utils
rand = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
tokio.workspace = true

[features]
test-utils = [ "dep:rand" ]
