[package]
edition.workspace = true
license.workspace = true
name = "katana-rpc-builder"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee.workspace = true
katana-rpc-api.workspace = true
katana-rpc-types.workspace = true

hyper.workspace = true
tokio.workspace = true
tower.workspace = true

futures.workspace = true
tower-http = { workspace = true, features = [ "full" ] }
